--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@giphy/js-fetch-api": "^4.1.2",
+    "@giphy/react-components": "^5.6.1",
     "@heroicons/react": "^1.0.6",
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@testing-library/jest-dom": "^5.16.2",
